fixed the bug that the selection and moving would overflow in the next line if the last tile in the line was chosen

--- a/style.css
+++ b/style.css
@@ -1,21 +1,32 @@
 /**Not 650 as you would expect since 8 x 8 grid and each tile has 70 px but 608 since borders*/
-.MagicGrid {
+.score{
+    position:fixed;
+    right:20%;
+    height: 10%;
+    font-size:40px
 
-    height: 608px;
-    width: 608px;
+}
+.MagicGrid {
+    margin: auto;
+    padding: 10px;
+    height: 912px;
+    width: 912px;
     display: flex;
     flex-wrap: wrap;
-    background-color: darkgreen;
 }
 .MagicGrid div{
-    height: 70px;
-    width: 70px;
+    height: 105px;
+    width: 105px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
     border: 3px solid black;
 
 
 }
-#StatusBar {
-    width: 100%;
+#progress {
+    margin:auto;
+    width: 60%;
     background-color: #ddd;
 }
 
